/*-
 * ‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾
 * Autonomic Proprietary 1.0
 * ——————————————————————————————————————————————————————————————————————————————
 * Copyright (C) 2018 Autonomic, LLC - All rights reserved
 * ——————————————————————————————————————————————————————————————————————————————
 * Proprietary and confidential.
 *
 * NOTICE:  All information contained herein is, and remains the property of
 * Autonomic, LLC and its suppliers, if any.  The intellectual and technical
 * concepts contained herein are proprietary to Autonomic, LLC and its suppliers
 * and may be covered by U.S. and Foreign Patents, patents in process, and are
 * protected by trade secret or copyright law. Dissemination of this information
 * or reproduction of this material is strictly forbidden unless prior written
 * permission is obtained from Autonomic, LLC.
 *
 * Unauthorized copy of this file, via any medium is strictly prohibited.
 * ______________________________________________________________________________
 */

// Copyright 2016 Google Inc.
// Copyright 2017 Autonomic Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package autonomic.ext.telemetry.tag;

import "autonomic/ext/telemetry/well_known_tags.proto";
import "autonomic/ext/telemetry/enumerations/offon_status.proto";
import "autonomic/ext/telemetry/enumerations/operation_activation.proto";
import "google/protobuf/timestamp.proto";

option go_package = "xk6-fabric/proto/autonomic/ext/telemetry";
option java_package = "com.autonomic.ext.telemetry.tag";
option java_outer_classname = "TagProto";
option java_multiple_files = true;

option cc_enable_arenas = true;

option objc_class_prefix = "AUT";

message TagName {
    oneof tag_name {
        WellKnownTag wkt_name = 1;
        string string_name = 2;
    }
}

message TagValue {
    oneof tag_value {
        string string_value = 1;
        bool bool_value = 2;
        int64 integer_value = 3;
        double double_value = 4;
        google.protobuf.Timestamp timestamp_value = 5;

        VehicleDoors.DoorTag door_tag_value = 6;
        VehicleWindows.WindowTag window_tag_value = 7;
        VehicleWheels.WheelTag wheel_tag_value = 8;
        VehicleSeats.SeatTag seat_tag_value = 9;
        VehicleGears.GearTag gear_tag_value = 10 [deprecated = true];
        VehicleBatteries.BatteryTag battery_tag_value = 11;
        VehicleIndicatorLights.IndicatorLightTag indicator_light_tag = 12 [deprecated = true];
        VehicleIndicatorLights.IndicatorLightState indicator_light_state = 13 [deprecated = true];
        DeviceAuthorizationStates.AuthorizationStatus device_auth_status = 14;
        VehicleWheels.WheelPlacardTag wheel_placard_value = 15 [deprecated = true];
        VehicleOccupantRole.OccupantRoleTag occupant_role_value = 16;
        autonomic.ext.telemetry.enumerations.offOnStatus.OffOnStatus traction_control_brake_status_tag_value = 17;
        autonomic.ext.telemetry.enumerations.offOnStatus.OffOnStatus traction_control_powertrain_tag_value = 18;
        autonomic.ext.telemetry.enumerations.operationActivation.OperationActivation regeneration_operation_activation = 19;
        AssetLocation.LocationType location_type_value = 20;
        EngineType.EngineTag engine_type = 21;
        EngineAutomaticStopReason.ReasonTag shutdown_reason = 22;
        DieselExhaustFilterSystemComponent.ComponentTag diesel_exhaust_filter_system_component = 23;
        DieselExhaustFilterCleaning.CleaningTag diesel_exhaust_filter_cleaning = 24;
        AntennaType.AntennaTag antenna_type_value = 25;
        VehicleBrakes.ParkingBrakeTypeTag parking_brake_type = 26;
        MonitorCoverage.MonitorCoverageTag monitor_coverage_tag_value = 27;
        autonomic.ext.telemetry.enumerations.offOnStatus.OffOnStatus hands_off_wheel_warning_type_value = 28;
        AntiTheftAlarmSource.AntiTheftAlarmSourceTag anti_theft_alarm_source = 29;
        SampleRate.SampleRateTag sample_rate = 30;
        BatteryLoadFault.BatteryLoadFaultTag battery_load_fault_tag_value = 31;
        BatteryPerformanceCause.BatteryPerformanceCauseTag battery_performance_cause_tag_value = 32;
        VehicleSide.VehicleSideTag vehicle_side_value = 33;
        TripProgress.TripProgressTag trip_progress_value = 34;
        XevChargerPowerType.XevChargerPowerTypeTag xev_charger_power_type_value = 35;
        XevBatteryType.XevBatteryTypeTag xev_battery_type_value = 36;
        XevChargeStatusOrigin.XevChargeStatusOriginTag xev_charge_status_origin_value = 37;
        XevVehicleConditioningType.XevVehicleConditioningTypeTag xev_vehicle_conditioning_type_value = 38;
        BluetoothPhoneCallType.BluetoothPhoneCallTypeTag bluetooth_phone_call_type_value = 39;
        BluetoothPhoneCallStatus.BluetoothPhoneCallStatusTag bluetooth_phone_call_status_value = 40;
        PreconditionStatus.PreconditionStatusTag precondition_status_value = 41;
        TrailerLightCheckPreconditionFailureReason.TrailerLightCheckPreconditionFailureReasonTag trailer_light_check_precondition_failure_reason_value = 42;
        FleetVehicleInhibitionType.FleetVehicleInhibitionTypeTag fleet_vehicle_inhibition_type_value = 43;
        AntiTheftVehicleInhibitionType.AntiTheftVehicleInhibitionTypeTag anti_theft_vehicle_inhibition_type_value = 44;
        SeverityLevel.SeverityLevelTag severity_level_value = 45;
        DeterminationMethod.DeterminationMethodTag determination_method_value =46;
        XevChargeOriginatorType.XevChargeOriginatorTypeTag xev_charge_originator_type_value = 47;
        RemoteStartFailureReason.RemoteStartFailureReasonTag remote_start_failure_reason_value = 48;
    }
}

message Tag {
    TagName name = 1;
    TagValue value = 2;
}
